--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
- "name": "flexi",
- "version": "1.0.0",
- "description": "",
- "main": "index.js",
- "scripts": {
-  "webpack": "./node_modules/.bin/webpack --watch",
-  "webpackprod": "./node_modules/.bin/webpack --mode=production --watch"
- },
- "author": "",
- "license": "ISC",
- "dependencies": {
-  "@tinymce/tinymce-react": "2.5.0",
-  "@types/node": "10.12.18",
-  "axios": "0.21.1",
-  "bootstrap": "4.3.1",
-  "bson": "^4.0.1",
-  "eventemitter3": "3.1.0",
-  "googleapis": "66.0.0",
-  "immutability-helper": "2.8.1",
-  "json-pretty-html": "1.1.6",
-  "mongodb-stitch-browser-sdk": "4.2.0",
-  "prop-types": "15.6.2",
-  "react": "16.7.0",
-  "react-dom": "16.7.0",
-  "ts-loader": "5.3.3",
-  "uuid": "3.3.2",
-  "webpack": "4.29.3"
- },
- "devDependencies": {
-  "mongodb-stitch-cli": "1.2.1",
-  "source-map-loader": "0.2.4",
-  "typescript": "3.1.3",
-  "webpack-cli": "4.3.1"
- }
+	"name": "flexi",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"server": "npx http-server",
+		"webpack": "./node_modules/.bin/webpack",
+		"webpackw": "./node_modules/.bin/webpack -- watch",
+		"webpackprod": "./node_modules/.bin/webpack --mode=production"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/node": "^22.13.9",
+		"@types/react": "^17.0.2",
+		"@types/react-dom": "^17.0.2",
+		"source-map-loader": "^5.0.0",
+		"typescript": "^5.8.2",
+		"webpack": "^5.98.0",
+		"webpack-cli": "^6.0.1"
+	},
+	"dependencies": {
+		"axios": "^1.8.1",
+		"bootstrap": "^5.3.3",
+		"bson": "^6.10.3",
+		"buffer": "^6.0.3",
+		"crypto-browserify": "^3.12.1",
+		"eventemitter3": "^5.0.1",
+		"googleapis": "^146.0.0",
+		"immutability-helper": "^3.1.1",
+		"json-pretty-html": "^1.1.6",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"stream-browserify": "^3.0.0",
+		"ts-loader": "^9.5.2",
+		"uuid": "^11.1.0",
+		"vm-browserify": "^1.1.2"
+	}
 }
