--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"server": "npx http-server",
+		"server": "node server.js",
 		"webpack": "./node_modules/.bin/webpack",
 		"webpackw": "./node_modules/.bin/webpack -- watch",
 		"webpackprod": "./node_modules/.bin/webpack --mode=production"
@@ -27,6 +27,7 @@
 		"buffer": "^6.0.3",
 		"crypto-browserify": "^3.12.1",
 		"eventemitter3": "^5.0.1",
+		"express": "^4.21.2",
 		"googleapis": "^146.0.0",
 		"immutability-helper": "^3.1.1",
 		"json-pretty-html": "^1.1.6",
